--- a/portfolio-KP/style.css
+++ b/portfolio-KP/style.css
@@ -70,7 +70,7 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
 }
 
@@ -142,7 +142,7 @@ body {
 }
 
 #about .about-col-1 img {
-  width: 100%;
+  width: 86%;
   border-radius: 20px;
 }
 
@@ -250,13 +250,14 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  
 }
 
 #skills .card {
   background-color: rgba(255, 255, 255);
   padding: 10px;
   width: 20rem;
-  height: 15rem;
+  height: 13rem;
   border-radius: 10px;
   margin: 20px;
   display: flex;
